[gd_scene load_steps=67 format=3 uid="uid://0l22ufcehv4h"]

[ext_resource type="Script" uid="uid://cd20lvcuciggc" path="res://entities/characters/enemies/mushroom/Mushroom.gd" id="1_fdeik"]
[ext_resource type="Shader" uid="uid://b0cp1sop4yxqs" path="res://resources/shaders/Hurt.gdshader" id="1_vqyvp"]
[ext_resource type="Texture2D" uid="uid://ctfpmr5n3ibwe" path="res://assets/sprites/characters/others/mushroom/mushroom_death_anim_strip_6.png" id="2_2mbbe"]
[ext_resource type="Texture2D" uid="uid://dqjb6e4hmx186" path="res://assets/sprites/characters/others/mushroom/mushroom_sleep_anim_strip_2.png" id="2_4gbvg"]
[ext_resource type="Texture2D" uid="uid://dmx0rknmbmnr5" path="res://assets/sprites/characters/others/mushroom/mushroom_awake_anim_strip_7.png" id="3_2mbbe"]
[ext_resource type="PackedScene" uid="uid://d3wdau0mkkvja" path="res://entities/utils/knockback_component/KnockbackComponent.tscn" id="3_grokc"]
[ext_resource type="PackedScene" uid="uid://dtw2oe6rya3fc" path="res://entities/utils/health_component/HealthComponent.tscn" id="4_fdeik"]
[ext_resource type="Texture2D" uid="uid://npv0wug6wqpl" path="res://assets/sprites/characters/others/mushroom/mushroom_crushed_anim_strip_6.png" id="4_x0tlu"]
[ext_resource type="PackedScene" uid="uid://dd4ds2iiul82s" path="res://entities/utils/hitbox_component/HitboxComponent.tscn" id="5_2mbbe"]
[ext_resource type="Texture2D" uid="uid://bfd5lkwr4061i" path="res://assets/sprites/characters/others/mushroom/mushroom_walk_anim_strip_8.png" id="5_le5n7"]
[ext_resource type="Texture2D" uid="uid://c8jpp5kq2a6ut" path="res://assets/sprites/others/zzz.png" id="6_do6yk"]
[ext_resource type="PackedScene" uid="uid://bdhst7l51m64h" path="res://entities/controllers/audio_controller/AudioController.tscn" id="6_x0tlu"]
[ext_resource type="PackedScene" uid="uid://w7y42hwt41uu" path="res://entities/controllers/movement_controller/MovementController.tscn" id="9_do6yk"]
[ext_resource type="Script" uid="uid://ch0yfe65jgdbo" path="res://resources/MovementModuleData.gd" id="10_56oxn"]
[ext_resource type="AudioStream" uid="uid://bntqibtif833d" path="res://assets/sounds/sfx/enemies/mushroom/boing.wav" id="12_2mbbe"]
[ext_resource type="Script" uid="uid://dbc42tswobjga" path="res://entities/characters/enemies/mushroom/MovementComponent.gd" id="14_56oxn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_do6yk"]
shader = ExtResource("1_vqyvp")
shader_parameter/flash_amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_bxbgu"]
atlas = ExtResource("4_x0tlu")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlm7v"]
atlas = ExtResource("4_x0tlu")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_do6yk"]
atlas = ExtResource("3_2mbbe")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsbuo"]
atlas = ExtResource("3_2mbbe")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_02f4b"]
atlas = ExtResource("3_2mbbe")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2eld6"]
atlas = ExtResource("3_2mbbe")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k7we"]
atlas = ExtResource("3_2mbbe")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_56oxn"]
atlas = ExtResource("2_2mbbe")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p5us"]
atlas = ExtResource("2_2mbbe")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qliks"]
atlas = ExtResource("2_2mbbe")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnmdy"]
atlas = ExtResource("2_2mbbe")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwa5s"]
atlas = ExtResource("2_2mbbe")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n44vf"]
atlas = ExtResource("2_2mbbe")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl4kt"]
atlas = ExtResource("2_4gbvg")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4i3v"]
atlas = ExtResource("2_4gbvg")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jgt3"]
atlas = ExtResource("4_x0tlu")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvpdq"]
atlas = ExtResource("4_x0tlu")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_24oq8"]
atlas = ExtResource("4_x0tlu")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hujus"]
atlas = ExtResource("4_x0tlu")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_widcw"]
atlas = ExtResource("4_x0tlu")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_muipb"]
atlas = ExtResource("4_x0tlu")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_se57m"]
atlas = ExtResource("5_le5n7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_txcbs"]
atlas = ExtResource("5_le5n7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac70k"]
atlas = ExtResource("5_le5n7")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmqbs"]
atlas = ExtResource("5_le5n7")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3t1a"]
atlas = ExtResource("5_le5n7")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqfhj"]
atlas = ExtResource("5_le5n7")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_84o6x"]
atlas = ExtResource("5_le5n7")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftglw"]
atlas = ExtResource("5_le5n7")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qliks"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxbgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlm7v")
}],
"loop": false,
"name": &"afraid",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_do6yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsbuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02f4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eld6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k7we")
}],
"loop": false,
"name": &"awake",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_56oxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p5us")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qliks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnmdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwa5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n44vf")
}],
"loop": false,
"name": &"dead",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl4kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4i3v")
}],
"loop": true,
"name": &"sleep",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jgt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvpdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24oq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hujus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_widcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muipb")
}],
"loop": false,
"name": &"smash",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_se57m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txcbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac70k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmqbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3t1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqfhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84o6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftglw")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8p5us"]
shader = ExtResource("1_vqyvp")
shader_parameter/flash_amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_bp85m"]
atlas = ExtResource("6_do6yk")
region = Rect2(0, 0, 14, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaa1h"]
atlas = ExtResource("6_do6yk")
region = Rect2(14, 0, 14, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fvnn"]
atlas = ExtResource("6_do6yk")
region = Rect2(28, 0, 14, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pvt5"]
atlas = ExtResource("6_do6yk")
region = Rect2(42, 0, 14, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_chqij"]
atlas = ExtResource("6_do6yk")
region = Rect2(56, 0, 14, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_1242a"]
atlas = ExtResource("6_do6yk")
region = Rect2(70, 0, 14, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyygd"]
atlas = ExtResource("6_do6yk")
region = Rect2(84, 0, 14, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn4qf"]
atlas = ExtResource("6_do6yk")
region = Rect2(98, 0, 14, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvmfd"]
atlas = ExtResource("6_do6yk")
region = Rect2(112, 0, 14, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvrgo"]
atlas = ExtResource("6_do6yk")
region = Rect2(126, 0, 14, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs7jg"]
atlas = ExtResource("6_do6yk")
region = Rect2(140, 0, 14, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_yebxr"]
atlas = ExtResource("6_do6yk")
region = Rect2(154, 0, 14, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_vsbuo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"disabled",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp85m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaa1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fvnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pvt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chqij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1242a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyygd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn4qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvmfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvrgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs7jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yebxr")
}],
"loop": true,
"name": &"enabled",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_02f4b"]
size = Vector2(14, 10)

[sub_resource type="Resource" id="Resource_jl4kt"]
script = ExtResource("10_56oxn")
module = NodePath("../KnockbackComponent")
priority = 1
metadata/_custom_type_script = "uid://dw3d2w1xljy02"

[sub_resource type="Resource" id="Resource_s4i3v"]
script = ExtResource("10_56oxn")
module = NodePath("../MovementComponent")
priority = 0
metadata/_custom_type_script = "uid://dw3d2w1xljy02"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x0tlu"]
size = Vector2(14, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_le5n7"]
size = Vector2(14, 7)

[node name="Mushroom" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 48
script = ExtResource("1_fdeik")

[node name="PlayerDetectorRaycast" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(30, 0)

[node name="GroundDetector" type="RayCast2D" parent="."]
position = Vector2(6, 0)
collision_mask = 34
collide_with_areas = true

[node name="Animator" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_do6yk")
sprite_frames = SubResource("SpriteFrames_qliks")
animation = &"smash"

[node name="SleepingOnomatopoeia" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_8p5us")
position = Vector2(12, -17)
sprite_frames = SubResource("SpriteFrames_vsbuo")
animation = &"disabled"
frame_progress = 0.586146

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_02f4b")

[node name="MovementController" parent="." instance=ExtResource("9_do6yk")]
movement_modules_data = Array[ExtResource("10_56oxn")]([SubResource("Resource_jl4kt"), SubResource("Resource_s4i3v")])

[node name="KnockbackComponent" parent="." instance=ExtResource("3_grokc")]

[node name="HealthComponent" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("4_fdeik")]
parent = NodePath("..")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("14_56oxn")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "knockback_component") instance=ExtResource("5_2mbbe")]
visible = false
collision_layer = 4
collision_mask = 66
health_component = NodePath("../HealthComponent")
knockback_component = NodePath("../KnockbackComponent")

[node name="HitboxComponentShape" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_x0tlu")

[node name="AudioController" parent="." instance=ExtResource("6_x0tlu")]

[node name="Bounce" type="AudioStreamPlayer2D" parent="AudioController"]
stream = ExtResource("12_2mbbe")
volume_db = -5.0
max_distance = 250.0
bus = &"SFX"

[node name="BounceArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
position = Vector2(0, -3.5)
rotation = 3.14159
shape = SubResource("RectangleShape2D_le5n7")

[node name="AfraidResetTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="animation_finished" from="Animator" to="." method="_on_animator_animation_finished"]
[connection signal="body_entered" from="BounceArea" to="." method="_on_bounce_area_player_entered"]
[connection signal="timeout" from="AfraidResetTimer" to="MovementComponent" method="_on_timer_timeout"]
